<resources>
    <string name="app_name">GSL Player</string>
    <string name="iniciar">Iniciar Sesion</string>
    <string name="registrate">Registrarse</string>
    <string name="correo">Correo/Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="sesion">Inicia Sesion</string>
    <string name="ayuda">Nesesitas ayuda??</string>
    <string name="click">Clik Here</string>
    <string name="olvide">Olvide mi contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="Notengo">No tienes una cuenta??</string>
    <string name="cuenta">Crear Cuenta</string>
    <string name="nombre">Nombre completo</string>
    <string name="ingresar">Ya tienes una cuenta??</string>
    <string name="entrarS">Iniciar sesion</string>


    <string name="mensaje">Desde el fin del mundo</string>
    <string name="nuevoAlbun">New albun</string>
    <string name="Artista">Duki</string>
    <string name="home">Inicio</string>
    <string name="explorer">Explorar</string>
    <string name="Like">Favoritos</string>
    <string name="perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">explorar</string>
    <string name="title_notifications">Favoritos</string>
    <string name="agregado">Exclusivos para ti</string>


</resources>